add electron-rebuild package for native module

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/eslint-config-typescript": "^4.0.0",
     "electron": "^6.0.0",
     "electron-icon-builder": "^1.0.1",
+    "electron-rebuild": "^1.8.8",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.19.0",
