--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "postuninstall": "electron-builder install-app-deps"
   },
   "main": "background.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ssssota/fontvuer.git"
+  },
+  "license": "MIT",
   "dependencies": {
     "core-js": "^3.4.3",
     "electron-updater": "^4.2.0",
