--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Use snapcraft
+      if: ${{ runner.os == 'Linux' }}
+      uses: samuuelmeuli/action-snapcraft@v1
+      with:
+        snapcraft_token: ${{ secrets.SNAPCRAFT_TOKEN }}
+
     - name: Install dependencies
       run: npm ci
     - name: Build and Release
