Add fontkit module

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@types/fontkit": "^1.8.0",
     "@types/mousetrap": "^1.6.3",
     "core-js": "^3.6.5",
     "electron-store": "^5.2.0",
     "electron-updater": "^4.3.1",
     "font-manager": "0.3.0",
+    "fontkit": "^1.8.1",
     "mousetrap": "^1.6.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
