--- a/package.json
+++ b/package.json
@@ -3,48 +3,53 @@
   "version": "1.0.3",
   "description": "Fontviewer. You can preview fonts.",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
-    "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "build": "vue-cli-service electron:build",
+    "serve": "vue-cli-service electron:serve",
+    "install-app-deps": "electron-builder install-app-deps",
+    "rebuild": "electron-rebuild",
+    "postinstall": "run-s install-app-deps rebuild",
+    "postuninstall": "run-s install-app-deps"
   },
   "main": "background.js",
   "dependencies": {
     "@types/fontkit": "^1.8.0",
-    "@types/mousetrap": "^1.6.3",
+    "@types/mousetrap": "^1.6.4",
+    "@types/node": "^14.11.8",
     "core-js": "^3.6.5",
     "electron-store": "^5.2.0",
-    "electron-updater": "^4.3.1",
-    "font-manager": "0.3.0",
+    "electron-updater": "^4.3.5",
+    "font-manager": "^0.3.0",
     "fontkit": "^1.8.1",
     "mousetrap": "^1.6.5",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.5.1",
-    "vuetify": "^2.3.2"
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.0.2",
+    "vuetify": "^2.3.14"
   },
   "devDependencies": {
-    "@mdi/font": "^4.9.95",
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-typescript": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
-    "@vue/eslint-config-typescript": "^4.0.0",
+    "@mdi/font": "^5.7.55",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "@vue/cli-plugin-babel": "^4.5.7",
+    "@vue/cli-plugin-eslint": "^4.5.7",
+    "@vue/cli-plugin-typescript": "^4.5.7",
+    "@vue/cli-service": "^4.5.7",
+    "@vue/eslint-config-airbnb": "^5.1.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "electron": "^6.1.12",
-    "electron-rebuild": "^1.11.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.26.9",
-    "sass-loader": "^8.0.2",
+    "electron-rebuild": "^2.2.0",
+    "eslint": "^7.0.0",
+    "eslint-plugin-vue": "^7.0.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "transform-loader": "^0.2.4",
-    "typescript": "~3.5.3",
+    "typescript": "^4.0.3",
     "vue-cli-plugin-electron-builder": "^1.4.6",
     "vue-cli-plugin-vuetify": "^2.0.6",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.5.0"
+    "vue-template-compiler": "^2.6.12",
+    "vuetify-loader": "^1.6.0"
   },
   "license": "MIT",
   "repository": {
