--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@mdi/font": "^5.7.55",
+    "@mdi/js": "^5.7.55",
     "@types/fontkit": "^1.8.0",
     "@types/mousetrap": "^1.6.4",
     "@types/node": "^14.11.8",
