--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,26 +1,27 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = [ "you" ]
-license = ""
-repository = ""
-default-run = "app"
-edition = "2018"
+authors = ["you"]
 build = "src/build.rs"
+default-run = "app"
+description = "A Tauri App"
+edition = "2018"
+license = ""
+name = "app"
+repository = ""
+version = "0.1.0"
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-rc.1", features = [] }
+tauri-build = {version = "1.0.0-rc.1", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = [ "derive" ] }
-tauri = { version = "1.0.0-rc.1", features = ["api-all"] }
-font-kit = "0.10.1"
-walkdir = "2.3.2"
-ttf-parser = "0.14.0"
 base64 = "0.13.0"
+font-kit = "0.10.1"
+serde = {version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tauri = {version = "1.0.0-rc.1", features = ["api-all"] }
+ttf-name-decoder = {git = "https://github.com/ssssota/ttf_name_decoder.git"}
+ttf-parser = "0.14.0"
+walkdir = "2.3.2"
 
 [features]
-default = [ "custom-protocol" ]
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
+default = ["custom-protocol"]
