--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,7 +14,7 @@ tauri-build = {version = "1.0.0-rc.1", features = [] }
 
 [dependencies]
 base64 = "0.13.0"
-font-kit = "0.10.1"
+font-kit = {git = "https://github.com/ssssota/font-kit.git", rev = "c74e7478b91f12c3137fb268b554b534b07d3b1c"}
 serde = {version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri = {version = "1.0.0-rc.1", features = ["api-all"] }
