--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "dev": "tauri dev",
+    "serve": "vite",
+    "build": "tauri build",
     "check": "svelte-check --tsconfig ./tsconfig.json",
+    "format": "run-p format:*",
+    "format:all": "prettier --write --plugin-search-dir=. .",
+    "format:rust": "cargo fmt --manifest-path src-tauri/Cargo.toml",
     "tauri": "tauri"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.37",
     "@tauri-apps/cli": "^1.0.0-rc.2",
     "@tsconfig/svelte": "^2.0.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.6.0",
+    "npm-run-all": "^4.1.5",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.3",
     "svelte-preprocess": "^4.10.2",
