--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,11 @@
   "[rust]": {
     "editor.defaultFormatter": "rust-lang.rust-analyzer",
     "editor.tabSize": 4
+  },
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "*.ts": "${capture}.*.ts",
+    "package.json": "pnpm-lock.yaml,pnpm-workspace.yaml,.prettier*,svelte.config*,vite.config*",
+    "Cargo.toml": "Cargo.lock"
   }
 }
